[build-system]
requires = ["setuptools>=45", "wheel", "pybind11>=2.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mapper-lib"
version = "1.0.0"
description = "Uma biblioteca C++ para mapeamento e transformação de dados"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Seu Nome", email = "seu.email@exemplo.com"}
]
maintainers = [
    {name = "Seu Nome", email = "seu.email@exemplo.com"}
]
keywords = ["mapping", "data transformation", "c++", "performance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C++",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.7"
dependencies = [
    "pybind11>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/seu-usuario/mapper-lib"
Repository = "https://github.com/seu-usuario/mapper-lib"
Issues = "https://github.com/seu-usuario/mapper-lib/issues"

[tool.setuptools]
packages = ["mapper"]
py-modules = ["main"]
package-dir = {"" = "."}

[tool.setuptools.package-data]
"*" = ["*.so", "*.pyd", "*.dll", "*.dylib"]
